Bugfixes and tweaks.
* Fixed a bug with dynamically defining getters and setters for classes breaking platform updating.
* Fixed a visual bug causing the experimental tag to be hidden when experimental features are shown, and the tag to be shown when featurea are hidden.
* Tweaked positioning of the 'EXPERIMENTAL' tag on the popup so it's not overlapping the platform tag.
* WIC is now persistent.
* Removed the update URL in preparation for uploading to the Chrome store.

--- a/Styles/Popup.less
+++ b/Styles/Popup.less
@@ -310,9 +310,8 @@ a img
 #experimental
 {
     position: absolute !important;
-    right: 33px !important;
+    right: 39px !important;
     top: 20px !important;
-    display: none;
     color: #921212 !important;
 }
 
